--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Reklama8
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:tempdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+# Hibernate Configuration
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+# JWT Configuration
+jwt.secret=5AUggU/6wrODCl3E9PTYbLHZKsLJp9JUBZbq63HzSZI=
+jwt.expiration=3600000
