Add notification logic and entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Reklama8
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:tempdb
+spring.datasource.url=jdbc:h2:file:~/reklama8db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
