Fix task scheduling and authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.jpa.hibernate.ddl-auto=create
 # JWT Configuration
 jwt.secret=5AUggU/6wrODCl3E9PTYbLHZKsLJp9JUBZbq63HzSZI=
 jwt.expiration=3600000
+
+#Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jimmy124w@gmail.com
+spring.mail.password=mkdejan13
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
