--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,9 @@ jwt.expiration=3600000
 #Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jimmy124w@gmail.com
-spring.mail.password=mkdejan13
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
